tests/missing_fmt.stderr
error: unexpected end of input, expected literal
 --> $DIR/missing_fmt.rs:3:1
  |
3 | #[error_context]
  | ^^^^^^^^^^^^^^^^
